fix: no flickering on hovering

--- a/src/pages/FormEditor/FormSandbox/FormStructure/FormSectionElement/style.module.css
+++ b/src/pages/FormEditor/FormSandbox/FormStructure/FormSectionElement/style.module.css
@@ -38,7 +38,7 @@
 }
 
 .bottomDropZone {
-    height: 28px;
+    height: 20px;
     flex-shrink: 0;
 }
 
